feat: Se implemento el CRUD completo de metodos de pago
